--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
@@ -2,10 +2,9 @@
     <div class="functions-area sidebar-content-header flex" style = "min-width: 1000px;">
 
         <div id="A">
-            <span>#{i18n.getText('QMM020_5')}</span>
+            <span>#{i18n.getText('QMM020_6')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
-                    data-bind="click: registerStateCorrelationHisDeparment, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
-
+                    data-bind="click: registerStateCorrelationHisDeparment, enable: $root.errors.isEmpty() &amp;&amp; enableRegisterButton()">#{i18n.getText('QMM020_1')}</button>
             <button id="A1_2" tabindex="2"
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
@@ -21,14 +20,15 @@
         <div class="fixed-flex-layout-left" style="margin-left: 25px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="C1_3" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">履歴追加</button>
+                    <button id="C1_3" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="C1_4" data-bind="click: openScreenK, enable: $root.errors.isEmpty() &amp;&amp; enableEditHisButton()" style="float: right">履歴編集</button>
+                    <button id="C1_4" data-bind="click: openScreenK, enable: $root.errors.isEmpty() &amp;&amp; enableEditHisButton()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
                     <table  id="C1_5"  data-bind="ntsGridList: {
                                             height: 250,
+                                            name: '#{i18n.getText('QMM020_23')}',
                                             dataSource: listStateCorrelationHis,
                                             primaryKey: 'hisId',
                                             columns: [
@@ -44,7 +44,7 @@
         </div>
         <div class="fixed-flex-layout-right">
             <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
-                <div id="C2_1" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_24')}</div>
+                <div style="margin-bottom: 10px;" id="C2_1" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_24')}</div>
             </div>
 
             <div>
