--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
@@ -54,7 +54,7 @@
                     <div style="float: left;width: 335px;">
 
                         <div tabindex="-1" class="panel" style=" margin-top: 15px"
-                             data-bind="ntsPanel:{width: '280px', height: '470px',showIcon: true, direction: 'bottom', visible: true}">
+                             data-bind="ntsPanel:{width: '280px', height: '490px',showIcon: true, direction: 'bottom', visible: true}">
                             <!--A4_3 検索-->
                             <div tabindex="3" style="width: 280px"
                                  data-bind="ntsSearchBox: {searchMode: 'highlight',targetKey: 'individualPriceCode', comId: 'treegrid',items: salIndAmountNames, searchText: '検索', selected: salIndAmountNamesSelectedCode, selectedKey: 'individualPriceCode', fields: ['individualPriceName', 'individualPriceCode'], mode: 'igGrid'}"/>
@@ -67,7 +67,7 @@
                                    data-bind="ntsGridList:{
                                    name: '#[QMM039_12]',
                                 width: 280,
-                                height: 420,
+                                rows: 18,
                                 dataSource: salIndAmountNames,
                                 columns: [
                                     {key:'index', length: 0, hidden: true},
@@ -114,14 +114,17 @@
                         <!--A5_6 基準年月-->
                         <div data-bind="ntsFormLabel: {  required: true}">#{i18n.getText('QMM040_13')}</div>
                         <!--A5_7 基準年月-->
-                        <div id="A5_7" tabindex="5" class="margin-left-item"
-                             data-bind="ntsDatePicker: {value: yearMonthFilter, dateFormat: 'yearmonth', name:'#[QMM040_13]',required: true}"/>
+                        <div style = "margin-left: 30px;">
+                            <div id="A5_7" tabindex="5"
+                                 data-bind="ntsDatePicker: {value: yearMonthFilter, dateFormat: 'yearmonth', name:'#[QMM040_13]',required: true}"/>
+                        </div>
+
                         <!--A5_8 抽出-->
                         <button tabindex="6" class="caret-bottom" data-bind="click: filterData ,enable: $root.errors.isEmpty"
                                 style="margin-left: 13px">#{i18n.getText('QMM040_14')}</button>
 
                     </div>
-
+                    <div style = "min-width: 600px;">
                     <table tabindex="7" id="A5_9">
                         <colgroup>
                             <col width="130px"/>
@@ -158,6 +161,7 @@
                         </tr>
                         </tbody>
                     </table>
+                    </div>
                 </div>
 
 
