--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -99,7 +99,7 @@
                             style="margin-left: 13px">#{i18n.getText('QMM042_8')}</button>
 
                 </div>
-
+                <div style = "min-width: 600px;">
                 <table tabindex="7" id="A4_7">
                     <colgroup>
                         <col width="130px"/>
@@ -137,6 +137,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
 
         </div>
