--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -6,7 +6,7 @@
 <body>
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
-        <script>var dialogSize = {width: 500, height: 340};</script>
+        <script>var dialogSize = {width: 480, height: 340};</script>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="../share/model.js"/>
         <com:scriptfile path="qmm020.k.vm.js"/>
@@ -15,8 +15,8 @@
         <com:stylefile path="qmm020.k.style.css"/>
     </ui:define>
     <ui:define name="content">
-        <div id="contents-area">
-            <div id="title" style="margin-bottom: 10px">
+        <div id="contents-area" style="padding: 20px;">
+            <div id="title" style="margin: 0px 0px 10px 5px">
                 <!-- K1_1 -->
                 <span id="K1_1" class="label">#{i18n.getText('QMM020_66')}</span>
             </div>
@@ -41,7 +41,7 @@
             <table style="margin-top: 10px;">
                 <tr>
                     <td>
-                        <div id="K1_6" data-bind="ntsFormLabel: {}" style="margin: 0px -20px 0px 165px;">
+                        <div id="K1_6" data-bind="ntsFormLabel: {required: true}" style="margin: 0px -20px 0px 165px;">
                             <span  class="label">#{i18n.getText('QMM020_54')}</span>
                         </div>
                     </td>
@@ -58,14 +58,14 @@
                     </td>
                     <td>
                         <div data-bind="if: modeScreen() != nts.uk.pr.view.qmm020.k.viewmodel.MODE_SCREEN.MODE_THREE">
-                            <span id="K1_9" class="label" style="margin: 5px 0px 0px 5px;" data-bind="text :  nts.uk.time.formatYearMonth(endYearMonthPeriod())"></span>
+                            <span id="K1_9" class="label" style="margin-left: 5px;" data-bind="text :  nts.uk.time.formatYearMonth(endYearMonthPeriod())"></span>
                         </div>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.k.viewmodel.MODE_SCREEN.MODE_THREE">
-                            <div id="K1_12" style="margin: 5px 0px 0px 5px;" tabindex="3" data-bind="ntsDatePicker: {
+                            <div id="K1_12" style="margin-left:5px;" tabindex="3" data-bind="ntsDatePicker: {
 												name: '#{i18n.getText('QMM020_62')}',
 												value: endYearMonthPeriod,
 												required: true,
-												enable: isCanPickDate,
+												enable: isCanPickDate(),
 												dateFormat: 'YYYY/MM/DD'}">
                             </div>
                         </div>
@@ -83,10 +83,10 @@
         <div id="functions-area-bottom" style="z-index: auto">
             <div id="center">
                 <!-- K2_1 登録 -->
-                <button id="K2_1" tabindex="3" class="proceed large"
+                <button id="K2_1" tabindex="4" class="proceed large"
                         data-bind="click: submit,enable: $root.errors.isEmpty">#{i18n.getText('QMM020_64')}</button>
                 <!-- K2_2 削除 -->
-                <button id="K2_2" tabindex="4"
+                <button id="K2_2" tabindex="5"
                         data-bind="click: cancel">#{i18n.getText('QMM020_65')}</button>
             </div>
 
