--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -30,7 +30,7 @@
                data-bind="ntsLinkButton: { jump: '../../041/a/index.xhtml' }">#{i18n.getText('QMM042_14')}</a>
         </div>
 
-        <div class="contents-area fixed-flex-layout" style="width: 1200px; height: 500px;">
+        <div id ="contents-area" class=" fixed-flex-layout">
             <div style="margin-left: 20px"  id="com-ccg001"></div>
             <div id="panel-left" class="fixed-flex-layout-left margin-top" style="margin-left: 100px; margin-top: 30px;">
                 <div style="float: left;width: 335px;">
