QMM020 fix bug 126009 126008

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -43,7 +43,7 @@
                                 </div>
                         </div>
                 </div>
-                <div class="fixed-flex-layout-right" style="margin-top: 20px;">
+                <div class="fixed-flex-layout-right" style="min-width:400px;margin-top: 20px;">
                         <span id="B2_1" style="margin-bottom: 15px;">#{i18n.getText('QMM020_17')}</span>
                         <div class="control-group flex valign-center" style="min-width: 500px;padding-top: 15px;margin-left: 20px">
                                 <pre id="B2_2" tabindex="-1" style="line-height: 1.8;">#{i18n.getText('QMM020_18')}</pre>
