add source server qmm038

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/contents.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/contents.xhtml
@@ -4,6 +4,6 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<div style="padding: 19px; margin-left: 70px;">
-		<table id="gridStatement"></table>
+		<table id="gridStatement" tabindex="6"></table>
 	</div>
 </ui:composition>
