--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -69,7 +69,8 @@
                             multiple: false,
                             value: codeSelected}"/>
                         <!--D1_11-->
-                        <button id="btn-register" tabindex="3" data-bind="click: register">#{i18n.getText('QMM019_110')}</button>
+                        <button id="btn-register" tabindex="3"
+                                data-bind="click: register">#{i18n.getText('QMM019_110')}</button>
                     </div>
                 </div>
                 <div class="cell valign-top" data-bind="with: dataScreen">
@@ -590,7 +591,8 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex="16" data-bind="click: decide, enable: $root.errors.isEmpty &amp;&amp; screenControl().enableD4_1()"
+            <button tabindex="16"
+                    data-bind="click: decide, enable: screenControl().enableD4_1() &amp;&amp; $root.errors.isEmpty"
                     class="proceed">#{i18n.getText('QMM019_56')}</button>
             <button tabindex="17" data-bind="click: cancel">#{i18n.getText('QMM019_57')}</button>
         </div>
