--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
@@ -73,7 +73,8 @@
                             multiple: false,
                             value: codeSelected}"/>
                         <!--F1_11-->
-                        <button id="btn-register" tabindex="3" data-bind="click: register">#{i18n.getText('QMM019_110')}</button>
+                        <button id="btn-register" tabindex="3"
+                                data-bind="click: register">#{i18n.getText('QMM019_110')}</button>
                     </div>
                 </div>
                 <div class="cell valign-top" data-bind="with: dataScreen">
@@ -340,16 +341,30 @@
                                             <!--F5_8-->
                                             <div class="label">#{i18n.getText('QMM019_157')}</div>
                                         </th>
-                                        <td data-bind="with: errorRangeSetting">
+                                        <td>
                                             <div class="label range-setting">
                                                 <!--F5_17-->
-                                                <span class="label" data-bind="text: upperLimitSetting.time10Value()"/>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIME">
+                                                    <span class="label"
+                                                          data-bind="text: errorRangeSetting.upperLimitSetting.timeValue()"/>
+                                                </com:ko-if>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIMES">
+                                                    <span class="label"
+                                                          data-bind="text: errorRangeSetting.upperLimitSetting.timesValue()"/>
+                                                </com:ko-if>
                                                 <!--F5_18-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--F5_19-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.time10Value()"/>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIME">
+                                                    <span class="label"
+                                                          data-bind="text: errorRangeSetting.lowerLimitSetting.timeValue()"/>
+                                                </com:ko-if>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIMES">
+                                                    <span class="label"
+                                                          data-bind="text: errorRangeSetting.lowerLimitSetting.timesValue()"/>
+                                                </com:ko-if>
                                                 <!--F5_20-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
@@ -362,16 +377,30 @@
                                             <!--F5_10-->
                                             <div class="label">#{i18n.getText('QMM019_157')}</div>
                                         </th>
-                                        <td data-bind="with: alarmRangeSetting">
+                                        <td>
                                             <div class="label range-setting">
                                                 <!--F5_21-->
-                                                <span class="label" data-bind="text: upperLimitSetting.time10Value()"/>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIME">
+                                                    <span class="label"
+                                                          data-bind="text: alarmRangeSetting.upperLimitSetting.timeValue()"/>
+                                                </com:ko-if>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIMES">
+                                                    <span class="label"
+                                                          data-bind="text: alarmRangeSetting.upperLimitSetting.timesValue()"/>
+                                                </com:ko-if>
                                                 <!--F5_22-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--F5_23-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.time10Value()"/>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIME">
+                                                    <span class="label"
+                                                          data-bind="text: alarmRangeSetting.lowerLimitSetting.timeValue()"/>
+                                                </com:ko-if>
+                                                <com:ko-if bind="timeCountAtr() == nts.uk.pr.view.qmm019.share.model.TimeCountAtr.TIMES">
+                                                    <span class="label"
+                                                          data-bind="text: alarmRangeSetting.lowerLimitSetting.timesValue()"/>
+                                                </com:ko-if>
                                                 <!--F5_24-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
@@ -406,7 +435,8 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex="16" data-bind="click: decide, enable: $root.errors.isEmpty &amp;&amp; screenControl().enableF4_1()"
+            <button tabindex="16"
+                    data-bind="click: decide, enable: screenControl().enableF4_1() &amp;&amp; $root.errors.isEmpty"
                     class="proceed">#{i18n.getText('QMM019_56')}</button>
             <button tabindex="17" data-bind="click: cancel">#{i18n.getText('QMM019_57')}</button>
         </div>
