--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -32,8 +32,8 @@
             <button  id="A1_2" data-bind="" tabindex="2">#{i18n.getText('QMM038_3')}</button>
         </div>
         <div id="contents-area"  style="margin-left: 15px;">
-            <div style="margin-left: 90px; border: 0.2px solid; width: 380px; padding: 14px;border-style:solid;">
-                <div id="A2_2" data-bind="ntsFormLabel: { constraint: 'LayoutCode', required: true }">レイアウトコード</div>
+            <div style="margin-left: 90px; border: 0.2px solid; border-color: #DCDCDC; width: 300px; padding: 14px;border-style:solid;">
+                <div id="A2_2" data-bind="ntsFormLabel: { constraint: '', required: true }">#{i18n.getText('QMM038_4')}</div>
                 <div id="A2_3" tabindex="3" data-bind="ntsDatePicker: {value: giveCurrTreatYear, dateFormat: 'yearmonth', name: '#[QMM038_4]'}"></div>
                 <button  id="A2_4"  data-bind="click: findByEmployee" tabindex="4">#{i18n.getText('QMM038_5')}</button>
             </div>
