Fix bug Gridlist

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -29,7 +29,7 @@
     <ui:define name="content">
         <div id="functions-area" >
             <button id="A1_1" class="proceed"  tabindex="1" style="margin-left: 110px;" data-bind="click: updateStatelmentItemName" >#{i18n.getText('QMM038_2')}</button>
-            <button  id="A1_2" data-bind="" tabindex="2">#{i18n.getText('QMM038_3')}</button>
+            <button  id="A1_2" data-bind="enable: false" tabindex="2">#{i18n.getText('QMM038_3')}</button>
         </div>
         <div id="contents-area"  style="margin-left: 15px;">
             <div style="margin-left: 90px; border: 0.2px solid; border-color: #DCDCDC; width: 300px; padding: 14px;border-style:solid;">
