--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
@@ -22,13 +22,13 @@
             </div>
 
             <div class="control-group" style="margin-left:10px">
-                <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_73')}</div>
-                <span class="label">#{i18n.getText('QMM020_74')}</span>
+                <div id="L1_3" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_73')}</div>
+                <span id="L1_4" class="label">#{i18n.getText('QMM020_74')}</span>
             </div>
             <div class="control-group" style="margin-left:10px">
-                <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_75')}</div>
+                <div id="L1_5" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_75')}</div>
                 <div class="cf" data-bind="ntsSwitchButton: {
-                                        name: 'Sample Switch',
+                                        name: '#{i18n.getText('QMM020_76')}',
                                         options: masterUse,
                                         optionsValue: 'code',
                                         optionsText: 'name',
@@ -39,6 +39,7 @@
 
             <div class="control-group" style="margin-left:10px">
                 <div id="L1_9" data-bind="ntsRadioBoxGroup: {
+                                name: '#{i18n.getText('QMM020_76')}',
                                 options: usageMaster,
                                 optionsValue: 'id',
                                 optionsText: 'name',
@@ -48,7 +49,7 @@
             </div>
 
             <div class="control-group" style="margin-left:10px">
-                <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_75')}</div>
+                <div id="L1_15" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_75')}</div>
                 <div class="cf" data-bind="ntsSwitchButton: {
                                         name: 'Sample Switch',
                                         options: individualUse,
